--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "bootstrap": "^3.4.1",
     "firebase-admin": "^9.5.0",
-    "firebase-functions": "^3.13.2"
+    "firebase-functions": "^3.13.2",
+    "react-bootstrap": "^1.5.2"
   }
 }
